# task

./: .gitignore  Makefile.am  README  README.md  configure.ac
include/: Executor.h  ExecutorInterface.h  ExecutorPool.h  Task.h  Work.h  WorkQueue.h  executor.h  executorPool.h  task.h  work.h  workQueue.h
src/: Executor.cpp  ExecutorPool.cpp  Task.cpp  WorkQueue.cpp  executor.cpp  task.cpp  workQueue.cpp
test/: test_task.cpp
